--- a/ClassAssignment7.html
+++ b/ClassAssignment7.html
@@ -18,6 +18,7 @@ div.container {
   border: 1px solid black;
   justify-content: space-between;
   align-items: flex-end;
+  background-color: #FFFE73;
   background-image: url(img/spongebob.svg);
   background-repeat: no-repeat;
   background-size: 1677px 717px;
