--- a/mdWp.html
+++ b/mdWp.html
@@ -32,7 +32,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
   }
   .nav-home {
     position: relative;
-    padding-left: 800px;
+    padding-left: 300px;
     font-family: Georgia, serif;
     font-size: 16px;
     font-style: italic;
@@ -78,7 +78,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 }
 .card {
   background-color: black;
-  width: 700px;
+  width: 500px;
   height: 700px;
 }
 .card-header {
@@ -99,6 +99,9 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
   color: white;
   text-align: center;
 }
+#flower{
+  float: right;
+}
 .stranger {
   font-family: 'Courier New', monospace;
   font-weight: bold;
@@ -112,16 +115,29 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
   font-size: 16px;
   color: white;
 }
+@media screen and (max-width: 975px) {
+  .navbar-name{
+    position: relative;
+    padding-right: 130px;
+  }
+  .smiley {
+    object-position: center;
+  }
+  .nav-home, .nav-marvel, .dropdown {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+  }
 </style>
 <body>
   <!-- Navbar Class -->
   <nav class="navbar navbar-custom">
     <a class="navbar-brand" href="#">
-      <img src="Gifs/smileyX.gif" alt="Pamela's Logo" height="40"></a>
+      <img class ="smiley" src="Gifs/smileyX.gif" alt="Pamela's Logo" height="40"></a>
   <!-- Navbar Name -->
       <a class="navbar-name" href="#">PAM'S WEBPAGE</a>
   <!-- Navbar Button Home -->
-        <a class="nav-home" href="midtermWP.html">Home</a>
+        <a class="nav-home" href="mdWp.html">Home</a>
   <!-- Navbar Marvel Geek Link -->
         <a class="nav-marvel" href="MarvelGeek.html">Marvel Geek</a>
   <!-- Navbar Dropdown Menu Homework Assignments -->
@@ -162,7 +178,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
       <img class="d-block w-100" src="img/RoseCloseUp copy.jpeg" alt="Third slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/colormood3" alt="Fourth slide">
+      <img class="d-block w-100" src="img/Halloween.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="img/PamelaSantana_Analogous_Analogous copy.png" alt="Fifth slide">
@@ -204,7 +220,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
           <div class="col">
         <!-- Second card -->
         <div class="card">
-          <div class="card-header">
+          <div class="card-header" id="flower">
             The Purple Flower
           </div>
            <img class="card-img-top" src="img/PurpleFlower.jpeg" width="500" height="500" alt="flowers in bloom">
