--- a/mdWp.html
+++ b/mdWp.html
@@ -120,9 +120,6 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
     position: relative;
     padding-right: 130px;
   }
-  .smiley {
-    object-position: center;
-  }
   .nav-home, .nav-marvel, .dropdown {
     position: relative;
     display: flex;
@@ -133,7 +130,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
   <!-- Navbar Class -->
   <nav class="navbar navbar-custom">
     <a class="navbar-brand" href="#">
-      <img class ="smiley" src="Gifs/smileyX.gif" alt="Pamela's Logo" height="40"></a>
+      <img src="Gifs/smileyX.gif" alt="Pamela's Logo" height="40"></a>
   <!-- Navbar Name -->
       <a class="navbar-name" href="#">PAM'S WEBPAGE</a>
   <!-- Navbar Button Home -->
